# temperature-sensitive-sir

./: .\output\output1.txt  .\output\output10.txt  .\output\output100.txt  .\output\output101.txt  .\output\output102.txt  .\output\output103.txt  .\output\output104.txt  .\output\output105.txt  .\output\output106.txt  .\output\output107.txt  .\output\output108.txt  .\output\output109.txt  .\output\output11.txt  .\output\output110.txt  .\output\output111.txt  .\output\output112.txt  .\output\output113.txt  .\output\output114.txt  .\output\output115.txt  .\output\output116.txt  .\output\output117.txt  .\output\output118.txt  .\output\output119.txt  .\output\output12.txt  .\output\output120.txt  .\output\output121.txt  .\output\output122.txt  .\output\output123.txt  .\output\output124.txt  .\output\output125.txt  .\output\output126.txt  .\output\output127.txt  .\output\output128.txt  .\output\output129.txt  .\output\output13.txt  .\output\output130.txt  .\output\output131.txt  .\output\output132.txt  .\output\output133.txt  .\output\output134.txt  (+177 more)
EpidemicIndices_StartTemp/: CMakeLists.txt  scalars_1_bth_no.csv  scalars_1_bth_yes.csv  script.sh  script_runfrontend.sh  starttempmodel.cpp  temperaturesensitivefunctions.hpp
EpidemicIndices_StartTemp/data/: MDR_uncertainty.txt  PDR_uncertainty.txt  a_uncertainty.txt  c_uncertainty.txt  mu_uncertainty.txt
Figures/code/: .RData  .Rhistory  fig2.R  fig3.R  fig4.R  figS1.R  figS8-S10.R  generate_uncertainty_samples.R  run_fig3.R  run_fig4.R  (+2 more)
FinalEpidemicSize/: model.cpp  script_uncertainty.sh  temperaturesensitivefunctions.hpp
(+116 files in other folders)
